TimingSource: basic implementation of snoop logic
Adds timing block with unit-test and dokumentation.

run `build/blocklib/timing/test/qa_timingSource timing-hardware`
to run the actual hardware tests, which are disabled by default because
they cannot work on the CI.

Other changes:
timing.hpp: use custom signal group to allow multiple threads

Special thanks to @RalphSteinhagen and @slebedev for their feedback and
for catching a few issues early on in the review.

Signed-off-by: Alexander Krimm <alex@wirew0rm.de>

--- a/blocklib/timing/test/CMakeLists.txt
+++ b/blocklib/timing/test/CMakeLists.txt
@@ -1,18 +1,28 @@
 function(add_ut_test TEST_NAME)
-    add_executable(${TEST_NAME} ${TEST_NAME}.cpp)
-    if ((CMAKE_CXX_COMPILER_ID MATCHES ".*Clang")) # needed for clang15 (false positives, fixed in clang16)
-        target_compile_options(${TEST_NAME} PRIVATE -Wall)
-        target_link_options(${TEST_NAME} PRIVATE -Wall)
-    else ()
-        target_compile_options(${TEST_NAME} PRIVATE -fsanitize=address -Wall)
-        target_link_options(${TEST_NAME} PRIVATE -fsanitize=address -Wall)
-    endif ()
-    target_include_directories(${TEST_NAME} PRIVATE ${CMAKE_BINARY_DIR}/include ${CMAKE_CURRENT_BINARY_DIR})
-    target_link_libraries(${TEST_NAME} PRIVATE gr-digitizers fmt ut)
-    add_test(NAME ${TEST_NAME} COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} ${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME})
+  add_executable(${TEST_NAME} ${TEST_NAME}.cpp)
+  if((CMAKE_CXX_COMPILER_ID MATCHES ".*Clang"))
+    # needed for clang15 (false positives, fixed in clang16)
+    target_compile_options(${TEST_NAME} PRIVATE -Wall)
+    target_link_options(${TEST_NAME} PRIVATE -Wall)
+  else()
+    target_compile_options(${TEST_NAME} PRIVATE -fsanitize=address -Wall)
+    target_link_options(${TEST_NAME} PRIVATE -fsanitize=address -Wall)
+  endif()
+  target_include_directories(${TEST_NAME} PRIVATE ${CMAKE_BINARY_DIR}/include
+                                                  ${CMAKE_CURRENT_BINARY_DIR})
+  target_link_libraries(${TEST_NAME} PRIVATE gr-digitizers fmt ut)
+  add_test(NAME ${TEST_NAME} COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR}
+                                     ${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME})
 endfunction()
 
-if(NOT EMSCRIPTEN AND NOT CLANG) ## clang/libc++ does not support the require <chrono> features to convert from TAI to UTC and 'std::views::enumerate'
-    add_ut_test(qa_timing)
-    target_link_libraries(qa_timing PRIVATE timing PkgConfig::saftlib PkgConfig::etherbone)
+# clang/libc++ does not support the required <chrono> features to convert from
+# TAI to UTC and 'std::views::enumerate'
+if(NOT EMSCRIPTEN AND NOT CLANG)
+  add_ut_test(qa_timing)
+  target_link_libraries(qa_timing PRIVATE timing)
+
+  add_ut_test(qa_timingSource)
+  target_link_libraries(
+    qa_timingSource PRIVATE gnuradio-algorithm gnuradio-core gr-basic
+                            gr-testing timing)
 endif()
