--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,9 @@ name: CMake
 
 on:
   push:
-    branches: [ dev-prototype ]
+    branches: [ main ]
   pull_request:
-    branches: [ dev-prototype ]
-  release:
-    types: [ created ]
+    branches: [ main ]
 
 jobs:
   build:
