Update Picoscope block: * Bump GR4 version and fix qa_Picoscope test * Serial number are correctly assigned * Use floats for settings * Add picoscope performance monitoring test * Add `gain` setting * Add `signal_qiantity` setting * Publish not enough space in buffer tag * Bug fixing
Signed-off-by: drslebedev <dr.s.lebedev@gmail.com>

--- a/blocklib/picoscope/test/CMakeLists.txt
+++ b/blocklib/picoscope/test/CMakeLists.txt
@@ -12,6 +12,7 @@ function(add_ut_test_tool TEST_NAME)
 endfunction()
 
 add_ut_test_tool(qa_Picoscope)
+add_ut_test_tool(qa_PicoscopePerformanceMonitor)
 
 if(NOT EMSCRIPTEN AND NOT CLANG)
   add_ut_test_tool(qa_PicoscopeTiming)
