update/rebuild Dockerfile
Signed-off-by: rstein <r.steinhagen@gsi.de>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM ghcr.io/fair-acc/gr4-build-container:latest
-LABEL authors="akrimm"
+LABEL authors="akrimm+rstein"
 
 # Install pkg-config
 RUN sudo apt-get update && sudo apt-get -y install build-essential pkg-config && sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/*
