TimingMatcher: initial implementation and test
Signed-off-by: Alexander Krimm <A.Krimm@gsi.de>

--- a/blocklib/picoscope/test/CMakeLists.txt
+++ b/blocklib/picoscope/test/CMakeLists.txt
@@ -13,6 +13,7 @@ endfunction()
 
 add_ut_test_tool(qa_Picoscope)
 add_ut_test_tool(qa_PicoscopePerformanceMonitor)
+add_ut_test_tool(qa_TimingMatcher)
 
 if(NOT EMSCRIPTEN AND NOT CLANG)
   add_ut_test_tool(qa_PicoscopeTiming)
