--- a/blocklib/digitizers/test/CMakeLists.txt
+++ b/blocklib/digitizers/test/CMakeLists.txt
@@ -10,7 +10,8 @@ function(add_ut_test TEST_NAME)
   endif()
   target_include_directories(${TEST_NAME} PRIVATE ${CMAKE_BINARY_DIR}/include
                                                   ${CMAKE_CURRENT_BINARY_DIR})
-  target_link_libraries(${TEST_NAME} PRIVATE gnuradio-core gr-digitizers fmt ut)
+  target_link_libraries(${TEST_NAME} PRIVATE gnuradio-core gr-digitizers ut
+                                             gnuradio-blocklib-core)
   add_test(NAME ${TEST_NAME} COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR}
                                      ${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME})
 endfunction()
