--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,23 +22,54 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   add_compile_options(-fdiagnostics-color=always)
 endif()
 
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
 
 include(cmake/CMakeRC.cmake)
 include(FetchContent)
 
-set(ENABLE_TESTING OFF)
 FetchContent_Declare(
   gnuradio4
   GIT_REPOSITORY https://github.com/fair-acc/gnuradio4.git
-  GIT_TAG 72997a580d3b62c67e661a6e60705202dfdb6478 # main as of 2025-07-07
+  GIT_TAG 677e09f77bd757adce311a8c1d3de0253b860c86 # main as of 2025-11-06
   EXCLUDE_FROM_ALL)
+
+# Workaround: Add Python dependency which is missing for the single header
+# target in gr4
+if(NOT EMSCRIPTEN)
+  find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
+  link_libraries(Python3::Python) # should be added to gr-basic in gr4 (if it is
+                                  # built with python support)
+endif()
 
 FetchContent_Declare(
   ut
   GIT_REPOSITORY https://github.com/boost-ext/ut.git
   GIT_TAG v2.3.1 # latest tag as of 2025-04-02
   EXCLUDE_FROM_ALL)
+
+if(CMAKE_CXX_COMPILER_ID MATCHES "(Clang|GNU)")
+  if(ADDRESS_SANITIZER)
+    set(SANITIZER_FLAGS
+        -fsanitize=address -fsanitize-address-use-after-scope -fsanitize=leak
+        -fno-omit-frame-pointer -fstack-protector-strong)
+  elseif(UB_SANITIZER)
+    set(SANITIZER_FLAGS
+        -fsanitize=undefined -fsanitize-address-use-after-scope -fsanitize=leak
+        -fno-omit-frame-pointer -fstack-protector-strong)
+  elseif(THREAD_SANITIZER)
+    set(SANITIZER_FLAGS -fsanitize=thread -fsanitize=thread)
+  endif()
+
+  if(DEFINED SANITIZER_FLAGS)
+    add_compile_options(${SANITIZER_FLAGS} -fno-omit-frame-pointer
+                        -fstack-protector-strong)
+    if(NOT EMSCRIPTEN)
+      add_compile_options(${SANITIZER_FLAGS} -fstack-clash-protection)
+    endif()
+    add_link_options(${SANITIZER_FLAGS})
+    message(STATUS "Enabled sanitizer flags: ${SANITIZER_FLAGS}")
+  endif()
+endif()
 
 add_library(gr-digitizers-options INTERFACE)
 include(cmake/CompilerWarnings.cmake)
@@ -117,16 +148,12 @@ endif()
 if(NOT EMSCRIPTEN)
   option(ENABLE_PICOSCOPE "Enable PicoScope support" ON)
   option(ENABLE_TIMING "Enable TimingReceiver support" ON)
-  set(PICOSCOPE_PREFIX
-      "/opt/picoscope"
-      CACHE PATH "Picoscope drivers prefix") # TODO use proper find_package
 endif()
 
 find_package(PkgConfig REQUIRED)
 
 if(ENABLE_PICOSCOPE)
-  pkg_check_modules(zlib REQUIRED IMPORTED_TARGET zlib)
-  pkg_check_modules(libusb REQUIRED IMPORTED_TARGET libusb-1.0)
+  find_package(PicoScope REQUIRED COMPONENTS ps3000a ps4000a ps5000a ps6000)
 endif()
 
 if(ENABLE_TIMING AND NOT EMSCRIPTEN)
@@ -163,7 +190,6 @@ if(ENABLE_GR_DIGITIZERS_TESTING
       EXECUTABLE
       ctest
       DEPENDENCIES
-      qa_BlockScalingOffset
       EXCLUDE
       "$CMAKE_BUILD_DIR/*"
       "concepts/.*"
@@ -174,7 +200,6 @@ if(ENABLE_GR_DIGITIZERS_TESTING
       EXECUTABLE
       ctest
       DEPENDENCIES
-      qa_BlockScalingOffset
       EXCLUDE
       "$CMAKE_BUILD_DIR/*"
       "concepts/.*"
