Fix Picoscope APT repo: switch from broken RC to stable
The RC repo (/rc/picoscope7/debian/) was re-signed with a new key
(CA45CA6D34435CAA) that Picotech never published — Release.gpg.key
still serves the old key and the new key is not on any keyserver.
This breaks `apt update` in CI for both gr-digitizers and opendigitizer.

The stable repo (/debian/) is still signed with the published key and
carries all five required libraries (libps3000a/4000a/5000a/6000/6000a).

Signed-off-by: Ralph J. Steinhagen <r.steinhagen@gsi.de>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM ghcr.io/fair-acc/gr4-build-container:latest
 LABEL authors="akrimm+rstein"
 
-# Trigger Update 2026-01-28
+# Trigger Update 2026-02-24
 # Install pkg-config
 RUN sudo apt-get update && sudo apt-get -y install build-essential pkg-config && sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/*
 
@@ -36,11 +36,13 @@ RUN sudo apt-get update \
     && sudo rm -rf /var/lib/apt/lists/*
 
 # Install picoscope libraries https://www.picotech.com/downloads/linux
+# N.B. the RC repo (/rc/picoscope7/debian/) was re-signed with an unpublished key (CA45CA6D34435CAA)
+# while Release.gpg.key still serves the old key — use the stable repo instead
 RUN sudo apt-get update \
     && ( wget -O - https://labs.picotech.com/Release.gpg.key | sudo gpg --dearmor -o /usr/share/keyrings/picotech.gpg ) \
-    && (echo 'deb [signed-by=/usr/share/keyrings/picotech.gpg] https://labs.picotech.com/rc/picoscope7/debian/ picoscope main' | sudo tee /etc/apt/sources.list.d/picoscope.list )  \
-    && sudo apt update \
-    && ( sudo apt install -y udev libusb-1.0-0-dev libps3000a libps4000a libps5000a libps6000 libps6000a libx11-dev libgl1-mesa-dev libsdl3-dev || true ) \
+    && ( echo 'deb [signed-by=/usr/share/keyrings/picotech.gpg] https://labs.picotech.com/debian/ picoscope main' | sudo tee /etc/apt/sources.list.d/picoscope.list ) \
+    && sudo apt-get update \
+    && ( sudo apt-get install -y udev libusb-1.0-0-dev libps3000a libps4000a libps5000a libps6000 libps6000a libx11-dev libgl1-mesa-dev libsdl3-dev || true ) \
     && sudo apt-get clean \
     && sudo rm -rf /var/lib/apt/lists/*
 
